--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^18.14.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.1.2",
     "ethers": "^5.7.1",
     "javascript-time-ago": "^2.5.7",
