--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
+    "aws-amplify": "^5.0.16",
     "axios": "^1.1.2",
     "ethers": "^5.7.1",
     "javascript-time-ago": "^2.5.7",
